--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="project-row">
           <img class="simon-p" src="images/simon-game.png" alt="simon-img">
           <h3>The Simon Game</h3>
-          <p> A web game application was based on the Simon Game of Hasbros, using jQuery library.  The game prompted player to repeat the correct color sequence. Good memory required to play this game! 
+          <p> A web game application was based on the Simon Game of Hasbros, using jQuery library.  The game prompted player to repeat the correct color sequence. Good memory required to play! 
           </p>
           <a class="btn-small" href="https://tpham523.github.io/simon_game/">PLAY GAME</a>
           <hr class="hr-small">
@@ -59,7 +59,7 @@
           <img class="calc-p" src="images/calculator.png" alt="calc-img">
           <h3>Classic Calculator</h3>
           <p>There are thousands of calculator applications on the web. But the Classic Calculator gave a fun and colorful look. If you just need a quick calcution, this application is for you.</p>
-          <a class="btn-small" href="https://tpham523.github.io/js-calculator/">CHECK IT OUT</a>
+          <a class="btn-small" href="https://tpham523.github.io/js-calculator/">TRY IT OUT</a>
           <hr class="hr-small">
         </div>
 
